@@ -1,4 +1,5 @@
 0.8.0 (currently working on)
+- [#2815] Fix: Registration Link is hidden and fully booked string is shown when an event has unlimited vacancies
 - [#2803] Change: Hide registration-related fields in the BE seminar editor if the seminar does not need registration
 - [#2799] Change: Don't display the red/yellow/green square for events that have started or lie in the past
 - [#2813] Change: <label for=""> does not use the values of the id attributes
